--- a/package.json
+++ b/package.json
@@ -3,9 +3,77 @@
   "version": "0.1.1",
   "main": "Gruntfile.js",
   "author": "Wordpress Live Blog Plugin",
-  "scripts": {},
+  "scripts": {
+    "eslint": "echo \"Progress: Running Eslint \" && eslint --fix 'src/js/**/*.js'",
+    "stylelint": "echo \"Progress: Running Style Linting \" && stylelint 'src/css/**/*.scss' --syntax scss --fix",
+    "phpchecks": "echo \"Progress: Running PHPCS Checks for changed files \" && chmod +x  bin/pre-commit.sh && ./bin/pre-commit.sh",
+    "js:watch": "NODE_ENV=development webpack --watch  --hide-modules --progress --config webpack.config.js",
+    "css:watch": "gulp watch",
+    "build:js": "NODE_ENV=development webpack --hide-modules --progress --config webpack.config.js",
+    "build:css": "gulp sass && npm run stylelint",
+    "build:assets": "npm run build:js && npm run build:css",
+    "test:unit": "wp-scripts test-unit-js --passWithNoTests",
+    "test:unit:watch": "wp-scripts test-unit-js --watch --passWithNoTests",
+    "deploy": "node bin/deploy.js"
+  },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-transform-shorthand-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.0.0",
+    "@wordpress/components": "^9.9.0",
+    "@wordpress/core-data": "^2.19.0",
+    "@wordpress/edit-post": "^3.20.0",
+    "@wordpress/eslint-plugin": "^6.1.0",
+    "@wordpress/jest-preset-default": "^6.1.0",
+    "@wordpress/scripts": "^10.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.2.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "grunt": "~0.4.5",
+    "grunt-wp-i18n": "~0.5.0",
+    "grunt-wp-readme-to-markdown": "~1.0.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-sass": "^4.1.0",
+    "jest-enzyme": "^7.1.2",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "stylelint": "^13.5.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.17.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "cypress": "^4.5.0",
     "@bigbite/wp-cypress": "^0.6.0"
+  },
+  "dependencies": {
+    "@wordpress/api-fetch": "^3.16.0",
+    "@wordpress/blocks": "latest",
+    "@wordpress/data": "^4.21.0",
+    "@wordpress/data-controls": "^1.15.0",
+    "@wordpress/date": "^3.10.0",
+    "@wordpress/dom-ready": "^2.10.0",
+    "@wordpress/element": "latest",
+    "@wordpress/i18n": "latest",
+    "@wordpress/icons": "^2.1.0",
+    "@wordpress/plugins": "latest",
+    "css-loader": "^3.5.3",
+    "eslint-plugin-jest": "^23.17.1",
+    "lodash": "^4.17.15",
+    "node-sass": "latest",
+    "pre-commit": "^1.2.2",
+    "react-oembed-container": "^1.0.0",
+    "style-loader": "^1.2.1"
   }
 }
